<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/white"
        android:elevation="@dimen/toolbarElevation"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:padding="@dimen/space.left"
            android:src="@drawable/ic_backspace"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/color_button_click" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space.left"
            android:text="@string/ui_teacher_profile"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/photo"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="@dimen/space.left"
                android:layout_marginTop="@dimen/space.top"
                app:civ_border_color="@color/colorPrimary"
                app:civ_border_width="1dp"
                app:civ_circle_background_color="@android:color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_learn"
                android:layout_marginTop="22dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="@+id/photo"
                app:layout_constraintEnd_toEndOf="@+id/photo"/>

            <TextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space.left"
                android:layout_marginEnd="@dimen/space.left"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/photo"
                app:layout_constraintTop_toTopOf="@+id/photo"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/photo"
                app:layout_constraintEnd_toEndOf="@+id/name"
                app:layout_constraintStart_toStartOf="@+id/name"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <FrameLayout
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/space.top"
                android:background="@color/line"
                app:layout_constraintTop_toBottomOf="@+id/photo" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:id="@+id/rateIcon"
                android:layout_marginStart="@dimen/space.left"
                android:layout_marginTop="@dimen/space.top"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/line"
                android:src="@drawable/ic_rate"/>

            <TextView
                android:id="@+id/weekRateLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/space.left"
                android:text="@string/ui_rate"
                android:layout_marginStart="12dp"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                app:layout_constraintTop_toTopOf="@+id/rateIcon"
                app:layout_constraintBottom_toBottomOf="@+id/rateIcon"
                app:layout_constraintStart_toEndOf="@+id/rateIcon"
                app:layout_constraintEnd_toStartOf="@+id/allRate" />

            <TextView
                android:id="@+id/weekRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/space.left"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/rateIcon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/rateIcon" />

            <TextView
                android:id="@+id/allRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/rateIcon"
                app:layout_constraintEnd_toStartOf="@+id/weekRate"
                app:layout_constraintTop_toTopOf="@+id/rateIcon"/>

            <FrameLayout
                android:id="@+id/line2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/space.top"
                android:background="@color/line"
                app:layout_constraintTop_toBottomOf="@+id/rateIcon" />

            <TextView
                android:id="@+id/answersTitle"
                android:layout_marginStart="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ui_answers"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@+id/line2"
                app:layout_constraintStart_toEndOf="@+id/answersIcon" />

            <TextView
                android:id="@+id/answersSeeAll"
                android:textSize="14sp"
                android:layout_marginEnd="@dimen/space.left"
                android:textColor="@color/color_accent_click"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ui_see_all"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/answersTitle"
                app:layout_constraintBottom_toBottomOf="@+id/answersTitle"/>

            <ImageView
                android:id="@+id/answersIcon"
                android:layout_width="24dp"
                android:src="@drawable/ic_bookmark_answers"
                android:layout_height="24dp"
                android:layout_marginStart="@dimen/space.left"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/answersTitle"
                app:layout_constraintBottom_toBottomOf="@+id/answersTitle"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/answersList"
                android:layout_width="match_parent"
                app:layout_constraintTop_toBottomOf="@+id/answersTitle"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:clipToPadding="false"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/book"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/ui_book"
                android:textAllCaps="true"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/answersList"
                android:textColor="@android:color/white"
                android:background="@drawable/background_button"
                android:layout_marginStart="@dimen/space.left"
                android:layout_marginEnd="@dimen/space.left"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>