<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/white"
        android:elevation="@dimen/toolbarElevation"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:padding="@dimen/space.left"
            android:src="@drawable/ic_backspace"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/color_button_click" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space.left"
            android:text="Программа Беларуси"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/themeTitle"
                android:layout_marginTop="@dimen/space.top"
                android:layout_marginEnd="@dimen/space.left"
                android:layout_marginStart="@dimen/space.left"
                app:layout_constraintTop_toTopOf="parent"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/themeDescription"
                app:layout_constraintTop_toBottomOf="@+id/themeTitle"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="@dimen/space.left"
                android:layout_marginStart="@dimen/space.left"
                android:textColor="@color/button"
                android:textSize="12sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:id="@+id/userPhoto"
                android:layout_marginTop="24dp"
                android:layout_marginStart="@dimen/space.left"
                app:layout_constraintTop_toBottomOf="@+id/themeDescription"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                app:layout_constraintStart_toEndOf="@+id/userPhoto"
                app:layout_constraintTop_toTopOf="@+id/userPhoto"
                app:layout_constraintEnd_toStartOf="@+id/like"
                app:layout_constraintBottom_toBottomOf="@+id/userPhoto"
                android:id="@+id/userName"
                android:layout_marginEnd="@dimen/space.left"
                android:textColor="@color/button"
                android:paddingStart="16dp"
                android:layout_width="0dp"
                android:gravity="center"
                android:layout_height="0dp"
                android:textSize="14sp"/>

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:id="@+id/share"
                android:src="@drawable/ic_share"
                app:layout_constraintTop_toTopOf="@+id/userPhoto"
                app:layout_constraintBottom_toBottomOf="@+id/userPhoto"
                app:tint="@color/color_button_click"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="@dimen/space.left"/>

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:id="@+id/like"
                android:src="@drawable/ic_like"
                app:layout_constraintTop_toTopOf="@+id/userPhoto"
                app:layout_constraintBottom_toBottomOf="@+id/userPhoto"
                app:tint="@color/color_button_click"
                app:layout_constraintEnd_toStartOf="@+id/share"
                android:layout_marginEnd="@dimen/space.left"/>

            <LinearLayout
                android:id="@+id/videoContainer"
                android:layout_width="match_parent"
                android:layout_marginStart="@dimen/space.left"
                android:layout_marginEnd="@dimen/space.left"
                android:layout_height="200dp"
                android:layout_marginTop="16dp"
                android:background="#E7E7E7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userPhoto"
                android:orientation="vertical">


                <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                    android:id="@+id/youtube"
                    app:autoPlay="false"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

                <ImageView
                    android:id="@+id/image"
                    android:scaleType="centerCrop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/splash"/>
            </LinearLayout>

            <TextView
                android:id="@+id/answerTitle"
                android:layout_width="0dp"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/button"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/videoContainer"
                app:layout_constraintStart_toStartOf="@+id/videoContainer"
                app:layout_constraintTop_toBottomOf="@+id/videoContainer" />

            <TextView
                android:id="@+id/answerDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/button"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/videoContainer"
                app:layout_constraintStart_toStartOf="@+id/videoContainer"
                app:layout_constraintTop_toBottomOf="@+id/answerTitle" />

            <TextView
                android:id="@+id/likeQuest"
                app:layout_constraintTop_toBottomOf="@+id/answerDescription"
                android:textSize="18sp"
                android:layout_marginTop="40dp"
                android:text="@string/ui_do_you_like_teacher"
                android:textColor="@color/button"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"/>

            <TextView
                android:id="@+id/book"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/ui_book"
                android:textAllCaps="true"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/likeQuest"
                android:textColor="@android:color/white"
                android:background="@drawable/background_button"
                android:layout_marginStart="@dimen/space.left"
                android:layout_marginEnd="@dimen/space.left"/>

            <androidx.constraintlayout.widget.Group
                android:id="@+id/answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="likeQuest,book,userName,videoContainer,answerDescription,share,like,userPhoto,answerTitle" />

            <TextView
                android:id="@+id/moreTitle"
                android:layout_marginTop="50dp"
                app:layout_constraintTop_toBottomOf="@+id/book"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/button"
                android:textSize="22sp"
                android:text="@string/ui_more_answers"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/space.left"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/answersList"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:clipToPadding="false"
                app:layout_constraintTop_toBottomOf="@+id/moreTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>